# poetry-slam

./: README.md  pyproject.toml  pytest.ini
src/poetry_slam/: build_tool.py  cli.py  defaults.toml
src/poetry_slam/templates/: __init__.py  project_template.py
src/poetry_slam/templates/default/: README.md  pyproject.toml
src/poetry_slam/templates/default/src/${PACKAGE_NAME}/: cli.py
src/poetry_slam/templates/default/test/: test_${PACKAGE_NAME}.py  test_${PACKAGE_NAME}_cli.py
test/: test_slam.py
