[tool.poetry]
name = "${PROJECT_NAME}"
version = "1.0"
description = "${DESCRIPTION}"
authors = ["${AUTHOR_NAME}"]
readme = "README.md"
packages = [
    {include = "*", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
rich = "^13.7.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
${PACKAGE_NAME} = "${PACKAGE_NAME}.cli:app"
